// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SVG drawing snapshot > keeps batched fills and deduplicated borders stable 1`] = `
{
  "svg": "<svg xmlns="http://www.w3.org/2000/svg" width="4" height="2" viewBox="0 0 4 2" preserveAspectRatio="xMidYMid meet"><title>Two &amp; squares</title>
<rect width="4" height="2" fill="#808080"/>
<path data-kind="0" fill="#000000" stroke="none" d="M0 0L2 0L2 2L0 2Z"><title>left &lt;square&gt;</title></path>
<path data-kind="1" fill="#ffffff" stroke="none" d="M2 0L4 0L4 2L2 2Z"><title>right square</title></path>
<path data-border="" fill="none" stroke="#123456" stroke-width="0.75" stroke-linecap="round" d="M0 0L2 0M2 0L2 2M0 2L2 2M0 0L0 2M2 0L4 0M4 0L4 2M2 2L4 2"/>
</svg>",
  "tileCount": 2,
}
`;

exports[`SVG drawing snapshot > keeps substitution drawings stable 1`] = `
{
  "chair": {
    "svgBytes": 90416,
    "svgSha256": "395408a3af7f3ee1b69937dbcba336f955382c3250685ada2bdf99a8d39f4cab",
    "tileCount": 457,
  },
  "hat": {
    "svgBytes": 168068,
    "svgSha256": "ba14ddec88cd4149a6fbbad8b4b9202697200d0ff2d54651fb570b2085562878",
    "tileCount": 461,
  },
  "penrose-p2": {
    "svgBytes": 49655,
    "svgSha256": "5ec1f089fe43de7befccf4e01c7b03146b9be3bd6f739db0363b9223c23fbfc5",
    "tileCount": 461,
  },
  "pinwheel": {
    "svgBytes": 44551,
    "svgSha256": "1880da1194cb37a7b01ae5647e545738ca1b8079cd99bc651b938598a755d8e1",
    "tileCount": 484,
  },
  "shuriken-supertile-12": {
    "svgBytes": 36811,
    "svgSha256": "1c9051e511c170b92e68d6c4fb3aded0dc247b8ad60279b3482507c1f96134bf",
    "tileCount": 437,
  },
  "sphinx": {
    "svgBytes": 71063,
    "svgSha256": "776a5c5cee7eedea0f99bb50f0d422d9657996fab6048d960d733ae64210c320",
    "tileCount": 469,
  },
  "watanabe-ito-soma-eightfold": {
    "svgBytes": 50600,
    "svgSha256": "4899eb67ae9f7aae72a5e4fa58e87731f310eef53236e07591a62409a09f22d5",
    "tileCount": 466,
  },
}
`;

exports[`SVG drawing snapshot > keeps the Danzer drawing stable 1`] = `
{
  "svgBytes": 17327,
  "svgSha256": "a8fdb83b80880aaf1c9ea94d673480959d83b14d19e1c05a68dd4eb9c74dc4ba",
  "tileCount": 194,
}
`;

exports[`SVG drawing snapshot > omits all border geometry when the border is transparent 1`] = `
{
  "svg": "<svg xmlns="http://www.w3.org/2000/svg" width="4" height="2" viewBox="0 0 4 2" preserveAspectRatio="xMidYMid meet"><title>Two &amp; squares</title>
<rect width="4" height="2" fill="#808080"/>
<path data-kind="0" fill="#000000" stroke="none" d="M0 0L2 0L2 2L0 2Z"><title>left &lt;square&gt;</title></path>
<path data-kind="1" fill="#ffffff" stroke="none" d="M2 0L4 0L4 2L2 2Z"><title>right square</title></path>
</svg>",
  "tileCount": 2,
}
`;
